--- a/training/deepspeed_config.json
+++ b/training/deepspeed_config.json
@@ -1,21 +1,43 @@
 {
-    "zero_optimization": {
-      "stage": 3,
-      "offload_param": {
-        "device": "cpu"
-      },
-      "offload_optimizer": {
-        "device": "cpu"
-      },
-      "overlap_comm": true,
-      "contiguous_gradients": true,
-      "reduce_bucket_size": 5e6,
-      "allgather_bucket_size": 5e6
-    },
-    "gradient_accumulation_steps": 4,
-    "train_micro_batch_size_per_gpu": 1,
-    "gradient_clipping": 1.0,
-    "bf16": {
-      "enabled": true
-    }
-  }
+  "gradient_accumulation_steps": 4,
+  "train_micro_batch_size_per_gpu": 1,
+  "gradient_clipping": "auto",
+  
+  "bf16": {
+    "enabled": true
+  },
+
+  "offload_param": {
+    "device": "cpu",
+    "pin_memory": true
+  },
+
+  "offload_optimizer": {
+    "device": "cpu",
+    "pin_memory": true
+  },
+  
+  "zero_optimization": {
+    "stage": 3,
+    "overlap_comm": true,
+    "contiguous_gradients": true,
+    "reduce_scatter": true,
+    "allgather_bucket_size": 5e8,
+    "reduce_bucket_size": "auto",
+    "stage3_prefetch_bucket_size": "auto",
+    "stage3_param_persistence_threshold": "auto",
+    "sub_group_size": 1e9,
+    "stage3_max_live_parameters": 1e9,
+    "stage3_max_reuse_distance": 1e9,
+    "stage3_gather_16bit_weights_on_model_save": true
+  },
+
+  "activation_checkpointing": {
+    "partition_activations": true,
+    "cpu_checkpointing": true,
+    "contiguous_memory_optimization": true
+  },
+
+  "steps_per_print": 5,
+  "wall_clock_breakdown": false
+}
