--- a/gradio/dockerfile
+++ b/gradio/dockerfile
@@ -2,7 +2,7 @@
 FROM mcr.microsoft.com/playwright:v1.50.1
 SHELL ["/bin/bash", "-c"]
 
-# adding a change
+# Add conda to the path
 ENV PATH="/miniconda3/bin:${PATH}"
 ARG PATH="/miniconda3/bin:${PATH}"
 
@@ -10,33 +10,38 @@ ENV CODE_URL="http://github.com/brandontrabucco/insta-dev"
 
 # Install wget to fetch Miniconda
 RUN apt-get update && \
-    apt-get install -y wget git screen htop && \
+    apt-get install -y wget git screen htop build-essential ffmpeg && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/*
 
 # Install Miniconda on x86 or ARM platforms
 RUN arch=$(uname -m) && if [ "$arch" = "x86_64" ]; then MINICONDA_URL="https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh"; elif [ "$arch" = "aarch64" ]; then MINICONDA_URL="https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-aarch64.sh"; else echo "Unsupported architecture: $arch"; exit 1; fi && wget $MINICONDA_URL -O miniconda.sh && mkdir -p /home/user/.conda && bash miniconda.sh -b -p /miniconda3 && rm -f miniconda.sh
 
-# clone the source code from https://github.com/data-for-agents/insta
+# Clone the repo https://github.com/data-for-agents/insta
 RUN git clone $CODE_URL /code/insta
 RUN chmod -R 777 /code/insta
 RUN chmod -R 777 /miniconda3
 
-# install the requirements
+# Install the requirements
 RUN source /miniconda3/bin/activate && \
     conda create -n insta python=3.10 -y && \
     conda activate insta && \
-    pip install -e /code/insta
+    pip install -e /code/insta && \
+    pip install git+https://github.com/huggingface/transformers
 
 # Create a user for the Huggingface space
 RUN groupmod -g 1010 ubuntu && \
     usermod -u 1010 -g 1010 ubuntu
 RUN useradd -m -u 1000 user
 
-# allow npm to run in the user's home directory
+# Allow npm to run in the user's home directory
 RUN mkdir -p "/home/user/.npm"
 RUN chown -R 1000:1000 "/home/user/.npm"
 RUN chmod -R 777 /usr/lib
+
+# Allow huggingface to access the user's cache directory
+RUN mkdir -p "/home/user/.cache"
+RUN chown -R 1000:1000 "/home/user/.cache"
 
 # Set the working directory
 WORKDIR /code/insta
