--- a/sft/accelerate_config.yaml
+++ b/sft/accelerate_config.yaml
@@ -1,7 +1,7 @@
 compute_environment: LOCAL_MACHINE
 debug: false
 deepspeed_config:
-  deepspeed_config_file: training/deepspeed_config.json
+  deepspeed_config_file: sft/deepspeed_config.json
   zero3_init_flag: false
 distributed_type: DEEPSPEED
 downcast_bf16: 'no'
